# my-roulette

./: .gitignore  README.md  pyproject.toml
src/my_roulette/: __init__.py
tests/: conftest.py
tests/fixtures/: help.txt
tests/integration/: test_my_roulette.py
tests/unit/: conftest.py  test_get_spin_count.py  test_main.py  test_parse_args.py  test_pick_number.py  test_print_selected.py  test_print_with_spinner.py  test_show_spinner.py
