[project]
name = "my-roulette"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "kantas-spike", email = "101532773+kantas-spike@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
my-roulette = "my_roulette:main"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "coverage>=7.13.4",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
omit = ["tests/*"]
